<resources>
    <string name="app_name">GITHUB</string>
    <string name="github_user">Github User</string>
    <string name="language">language</string>
    <string name="name_user">name</string>
    <string name="username_detail">username detail</string>
    <string name="location">location</string>
    <string name="company">company</string>
    <string name="followings">Followings</string>
    <string name="followings_detail">followings detail</string>
    <string name="followers">Followers</string>
    <string name="followers_detail">followers detail</string>
    <string name="repository">Repository</string>
    <string name="repository_detail">repository detail</string>
    <string name="change_language_setting">change language setting</string>
    <string name="tablayout_1">Followers</string>
    <string name="tablayout_2">Followings</string>
    <string name="hint_search_user">Search User</string>
</resources>